# questro

./: .gitignore  README.md  config.py  create_socket.py  pyproject.toml  requirements.txt  run.py  service.py
config/: config.py  logger.py
data/: questions.json
docs/: client.md  server.md
managers/: game_manager.py  player_manager.py  question_manager.py
models/: game_session.py  player.py  question.py
questro_frontend/: README.md  index.html  package-lock.json  package.json
questro_frontend/src/: App.vue  main.js  router.js  socket_utils.js
questro_frontend/src/components/: AnswerQuestionPage.vue  CreatePage.vue  JoinPage.vue  MainMenuPage.vue  PickCategoryPage.vue  PickQuestionsPage.vue  QuestionsPage.vue  ResultsPage.vue  WaitForAnswerPage.vue  WaitForPickPage.vue
src/: create_socket.py  run.py  service.py
src/config/: config.py
src/data/: categories.json  questions.json
src/docs/: client_states.md  models.md
src/managers/: categories_manager.py  game_manager.py  player_manager.py  question_manager.py
src/models/: category.py  game_session.py  player.py  question.py
src/static/: index.html
src/static/scripts/: main.js
tests/mocks/: categories.json  questions.json
tests/test_managers/: categories_manager_test.py  game_manager_test.py  question_manager_test.py
tests/test_models/: game_session_test.py
